# AI-Quant-Research-System

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  ROADMAP.md  START_UI.bat  config.example.toml  pyproject.toml  requirements.txt  run_once.bat  run_once.ps1  run_ui.bat  run_ui.py
examples/: benchmark_daily.csv  daily_prices.csv  raw_news.jsonl  sp500_constituents.csv  sp500_constituents_pit_template.csv
src/ai_quant_research_system/: __init__.py  calendar.py  cli.py  config.py  database.py  factor_engine.py  ingest.py  model_engine.py  news_collectors.py  news_factor_engine.py  portfolio_engine.py  providers.py  quality.py  records.py  trust_audit_engine.py  universe.py  yahoo_finance.py
